constructor factory method that supports over-riding and super calls - the method is a property of all constructors made with this factory and creates a nice chaining effect. in many of my own words but based on J.Resig Ninja book, listing 6.20

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <head>
     <title>
         Sprite Demonstration
@@ -9,8 +12,7 @@
             document.execCommand("BackgroundImageCache", false, true);
         } catch(e) {}
     </script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-    <script type="text/javascript" data-main="lib/smorgasbord/bord2" src="lib/require/require.js"></script>
+    <script type="text/javascript" data-main="lib/smorgasbord/smorgasbord.js" src="lib/require/require.js"></script>
     <style type="text/css">
         #draw-target {
             width:480px;
