integrating box 2D physics engine, question to subclass bord ?

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <head>
     <title>
-        Sprite Demonstration
+        DHTML Sprite Demonstration
     </title>
     <script type="text/javascript">
         // IE6 background image caching fix.
@@ -13,6 +13,7 @@
         } catch(e) {}
     </script>
     <script type="text/javascript" data-main="lib/smorgasbord/smorgasbord.js" src="lib/require/require.js"></script>
+
     <style type="text/css">
         #draw-target {
             width:480px;
@@ -25,7 +26,12 @@
 </head>
 
 <body>
-<p>DHTML Demonstration. Static sprites being drawn.</p>
+<p>DHTML Demonstration. Sprites being drawn.</p>
+
+
 <div id="draw-target"></div>
+
+
+<canvas id="c" width="640" height="480" style="border: 1px solid black"></canvas>
 </body>
 </html>
