physics starting to be hooked into the sprite system

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <head>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.pack.js"></script>
     <title>
         DHTML Sprite Demonstration
     </title>
@@ -12,12 +13,13 @@
             document.execCommand("BackgroundImageCache", false, true);
         } catch(e) {}
     </script>
+
     <script type="text/javascript" data-main="lib/smorgasbord/smorgasbord.js" src="lib/require/require.js"></script>
 
     <style type="text/css">
         #draw-target {
-            width:480px;
-            height:320px;
+            width:640px;
+            height:434px;
             background-color:#ccf;
             position:relative;
         }
