things generally into a framework. working on view class and thinking about matrix and vector classes....?

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.pack.js"></script>
     <title>
-        DHTML Sprite Demonstration
+        Smorgasbord Demonstration
     </title>
     <script type="text/javascript">
         // IE6 background image caching fix.
@@ -15,15 +15,8 @@
     </script>
 
     <script type="text/javascript" data-main="lib/smorgasbord/smorgasbord.js" src="lib/require/require.js"></script>
+    <link rel="stylesheet" type="text/css" href="resources/styles/style.css" />
 
-    <style type="text/css">
-        #draw-target {
-            width:640px;
-            height:434px;
-            background-color:#ccf;
-            position:relative;
-        }
-    </style>
 
 </head>
 
