doing keyboard listener stuf, seems to be not getting the keydown/keyup events? maybe firebug? try outputting to ui div?

--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
 </head>
 
 <body>
-<p>DHTML Demonstration. Sprites being drawn.</p>
+<p>DHTML Demonstration.</p>
+
+<div id="ui" style="float:right;width:250px;height:250px;border:1px solid black"></div>
 
 
+<div id="viewport">
 <div id="draw-target"></div>
-
+</div>
 <!--
 <canvas id="c" width="640" height="480" style="border: 1px solid black"></canvas>
 -->
