--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <div id="draw-target"></div>
 </div>
 <!--
+<span style="position:absolute;top:240px;left:320px">M</span>
 <canvas id="c" width="640" height="480" style="border: 1px solid black"></canvas>
 -->
 </body>
